--- a/index.html
+++ b/index.html
@@ -3,50 +3,51 @@
 
 <head>
     <meta charset="utf-8">
-    <title>mini first Angular</title>
+    <title></title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body ng-controller="mainCtrl">
+    <h1>"My Friends"</h1>
 
-    <div>
-        <h1 ng-repeat="friend in friends">  <!--ng repeat is sort of a loop. / friend in friends is like var key in obj -->
+    <div ng-repeat="friend in friends">
+        <!-- ng-repeat is looping through the friends array with friend as the variable -->
+
         <p>{{friend}}</p>
+        <!-- {{friend}} is diplaying the array -->
 
-        </h1>
-
-        <input ng-model="newItem" placeholder="Add new item">
-        <!--input space -->
-        <button ng-click="friends.push(newItem)"></button>
-        <!--button pushing new item to ours friends array  -->
-        <!-- ng model binds an input,  so newItem is bound to friends.push which pushes new items onto our friends list -->
 
     </div>
 
 
     <div>
-        <h1 ng-repeat="gun in guns">  <!--ng repeat is sort of a loop. / friend in friends is like var key in obj -->
-        <p>{{gun}}</p>
+        <input ng-model="name" placeholder="Add Friend">
+        <button ng-click="addFriend(name)" class="pushButton"></button>
+        <!-- ng click has the addFriend() and invokes it to push param name onto array friends. ng-model holds name param that will be passed into the addFriend function on ng-click -->
+    </div>
 
-        </h1>
+    <div>
 
-        <input ng-model="newthing" placeholder="Add new item">
-        <button ng-click="guns.push(newthing)"></button>
-        <!--button pushing newthing to our guns array  -->
-        <!-- ng model binds an input, so newthing is bound to guns.push which pushes items onto our guns list -->
+        <input ng-model="email" placeholder="email"> {{ email }}
+        <!-- Testing two way binding with ng-model -->
+
+    </div>
+
+    <div>
+
+        <input ng-model="state" placeholder="state"> {{state}}
+        <!-- Testing two way binding with ng-model -->
 
     </div>
 
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/mainCtrl.js"></script>
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.js"></script>
+    <script src="js/app.js" charset="utf-8"></script>
+    <script src="js/mainCtrl.js" charset="utf-8"></script>
 
 </body>
 
 </html>
-
-
-<!-- linked css -->
-<!-- added three scripts that link [angular cdn, js/apps.js, js/mainCtrl.js] -->
